Admin job management 1.1
Compleete the worker list category
