# cmd/api/docs/swagger.json
@@ -385,10 +385,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Admin"
+                    "Worker"
                 ],
-                "summary": "list all job categories for admin",
-                "operationId": "list all job category",
+                "summary": "list all job categories for Worker",
+                "operationId": "list all job category for worker",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1452,18 +1452,28 @@
                 "operationId": "worker login authentication",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User Name : ",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password : ",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Worker Login",
+                        "name": "WorkerLogin",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/domain.Login"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "password": {
+                                            "type": "string"
+                                        },
+                                        "username": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
                     }
                 ],
                 "responses": {
@@ -1529,18 +1539,28 @@
                 "operationId": "Worker SignUp authentication",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User Name : ",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password : ",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Worker Signup",
+                        "name": "WorkerSignup",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/domain.Login"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "password": {
+                                            "type": "string"
+                                        },
+                                        "username": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
                     }
                 ],
                 "responses": {
